// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled radio button renders disabled version 1`] = `
<div>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiIconButton-root Mui-disabled PrivateSwitchBase-root MuiRadio-root Radio-icon PrivateSwitchBase-disabled Mui-disabled Mui-disabled"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input"
        disabled=""
        type="radio"
        value=""
      />
    </span>
  </span>
</div>
`;

exports[`radio button renders default radio button 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-icon"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input"
        type="radio"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
